Fixing spacing errors

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -130,7 +130,7 @@ input.form-control::placeholder {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: white;
     width: 80%;
-    height: 30%;
+    height: 80%;
     border-radius: 15px;
     display: flex;
     padding: 0 2rem;
@@ -150,6 +150,7 @@ input.form-control::placeholder {
 
 .drawing-canvas{
     width: 60%;
+    height: 100%;
     border-left: 1px;
     border-top: 0px;
     border-bottom: 0px;
